final updates to the template folder

--- a/Template/.env
+++ b/Template/.env
@@ -1,2 +1,15 @@
-## If you want to get an overview of what this file is, and it's use
-## Go to the Template/README.md file
+## This file holds secret keys and environment specific settings.
+## It is read by the python-dotenv package
+## It is called within our python files by writing os.getenv("....secret....")
+## MAKE SURE TO NEVER SHARE SECRET KEY FILE
+## Create ".gitignore" file and put this file inside of that file
+
+## Flask's secret key (Try to make it a long random string try not use numbers)
+## SECRET_KEY = "ThisIsNotMySecretKey"
+
+## Database connection (MySQL)
+## DB_HOST = "localhost"
+## DB_PORT = "3306"
+## DB_USER = "root"
+## DB_PASSWORD = "ThisIsNotMyPassword!"
+## DB_NAME = "flaskproject"
